add: hero section

--- a/index.html
+++ b/index.html
@@ -50,7 +50,15 @@
     </ul>
   </header>
 
-  <main></main>
+  <main>
+    <div class="imgBx"><img src="./assets/images/pizza_2.png" alt=""></div>
+    <div class="contentBx">
+      <h1>VINCENT PIZZA.</h1>
+      <h2>MAKING PEOPLE HAPPY</h2>
+      <p>Italian Pizza With Cherry Tomatoes and Green Basil</p>
+      <div class="btn">VIEW MENU</div>
+    </div>
+  </main>
 
   <script src="./assets/script.js"></script>
 </body>
