--- a/index.html
+++ b/index.html
@@ -9,12 +9,17 @@
 
   <!-- google font -->
   <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:regular,700" rel="stylesheet" />
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300italic,regular,italic,600,600italic,700,700italic,800,800italic"
+    rel="stylesheet" />
+
   <!-- custom CSS -->
   <link rel="stylesheet" href="./assets/style.css">
 </head>
 
 <body>
 
+  <!-- -------------header section start--------------- -->
   <header>
     <div class="header-top">
       <div class="schedule">
@@ -51,13 +56,117 @@
   </header>
 
   <main>
-    <div class="imgBx"><img src="./assets/images/pizza_2.png" alt=""></div>
-    <div class="contentBx">
-      <h1>VINCENT PIZZA.</h1>
-      <h2>MAKING PEOPLE HAPPY</h2>
-      <p>Italian Pizza With Cherry Tomatoes and Green Basil</p>
-      <div class="btn">VIEW MENU</div>
-    </div>
+    <!-- -------------Hero section start--------------- -->
+    <section class="hero">
+      <div class="imgBx"><img src="./assets/images/pizza_2.png" alt=""></div>
+      <div class="contentBx">
+        <h1>VINCENT PIZZA.</h1>
+        <h2>MAKING PEOPLE HAPPY</h2>
+        <p>Italian Pizza With Cherry Tomatoes and Green Basil</p>
+        <div class="btn">VIEW MENU</div>
+      </div>
+    </section>
+
+    <!-- -------------Service section start--------------- -->
+    <section class="service">
+      <div class="box">
+        <div class="top"><img src="./assets/images/icon_1.png" alt=""></div>
+        <h2>QUALITY FOODS</h2>
+        <p>Sit amet, consectetur adipiscing elit quisque eget maximus velit, non eleifend libero curabitur dapibus
+          mauris sed leo cursus aliquetcras suscipit.</p>
+      </div>
+      <div class="box">
+        <div class="top"><img src="./assets/images/icon_3.png" alt=""></div>
+        <h2>FASTEST DELIVERY</h2>
+        <p>Sit amet, consectetur adipiscing elit quisque eget maximus velit, non eleifend libero curabitur dapibus
+          mauris sed leo cursus aliquetcras suscipit.</p>
+      </div>
+      <div class="box">
+        <div class="top"><img src="./assets/images/icon_2.png" alt=""></div>
+        <h2>ORIGINAL RECIPES</h2>
+        <p>Sit amet, consectetur adipiscing elit quisque eget maximus velit, non eleifend libero curabitur dapibus
+          mauris sed leo cursus aliquetcras suscipit.</p>
+      </div>
+    </section>
+
+    <!-- -------------Hot sell section start--------------- -->
+    <section class="hot-sell">
+      <h1>HOT SALES</h1>
+      <div class="hot-sell-items">
+
+        <div class="item one">
+          <img src="./assets/images/HS-1.png" alt="">
+          <p class="name">PROSCIUTTO</p>
+          <p class="detail">Classic marinara sauce, authentic old world pepperoni, all-natural Ita</p>
+          <p class="prize">$3.50</p>
+        </div>
+
+        <div class="item two">
+          <img src="./assets/images/HS-2.png" alt="">
+          <p class="name">CAPRICCIOSA</p>
+          <p class="detail">Classic marinara sauce, authentic old world pepperoni, all-natural Ita</p>
+          <p class="prize">$3.90</p>
+        </div>
+
+        <div class="item three">
+          <img src="./assets/images/HS-3.png" alt="">
+          <p class="name">CARBONARA</p>
+          <p class="detail">Classic marinara sauce, authentic old world pepperoni, all-natural Ita</p>
+          <p class="prize">$3.80</p>
+        </div>
+
+        <div class="item four">
+          <img src="./assets/images/HS-4.png" alt="">
+          <p class="name">DIABLO</p>
+          <p class="detail">Classic marinara sauce, authentic old world pepperoni, all-natural Ita</p>
+          <p class="prize">$3.50</p>
+        </div>
+      </div>
+    </section>
+
+
+    <!-- -------------About section start--------------- -->
+    <section class="about">
+      <div class="left">
+        <h2>WE ARE VINCENT</h2>
+        <p class="bold">WE DON’T JUST MAKE PIZZA. WE MAKE PEOPLE’S DAYS. VINCENT PIZZERIA WAS BUILT ON THE BELIEF THAT
+          PIZZA SHOULD
+          BE SPECIAL, AND WE CARRY THAT BELIEF INTO EVERYTHING WE DO.</p>
+        <img src="./assets/images/separator_dark.png" alt="" class="separator">
+        <p class="first">What’s our purpose at Vincent? Moments of Excitement. All made possible by our flavor,
+          innovation and, most
+          importantly, by unlocking potential in our team members.</p>
+        <p class="second">With more than 50 years of experience under our belts, we understand how to best serve our
+          customers through
+          tried and true service principles. Instead of following trends, we set them. We create food we’re proud to
+          serve and deliver it fast, with a smile. No matter where you find us, we’re making sure each meal our
+          customers enjoy is delicious and one-of-a-kind.</p>
+      </div>
+      <div class="right">
+        <p class="review">Vincent was one of the first restaurants I discovered upon moving to New York last summer, and
+          it remains a favorite. Despite its sizable menu full of pastas, sandwiches, and pizzas, I almost always get
+          the same thing – the Vincent pizza. It’s made with Ricotta & Marinara sauces, spiced with oregano, and topped
+          with eggplant, red onions, basil, Pecorino Romano & Mozzarella. It really is one of the best pizzas I’ve ever
+          had – and I eat a lot of pizza.</p>
+        <div class="client">
+          <img src="./assets/images/testimonial_1-200x200.jpg" alt="">
+          <div class="client-detail">
+            <h4>ADAM JEFFERSON</h4>
+            <p>Lawyer, New York</p>
+          </div>
+        </div>
+
+        <p class="review">The pizza is delicious! The crust is thin and crispy, great sauce, and awesome cheese blend.
+          And it makes a cute cheap date!</p>
+        <div class="client">
+          <img src="./assets/images/testimonial_2-200x200.jpg" alt="">
+          <div class="client-detail">
+            <h4>SAMANTHA GREENBERG</h4>
+            <p>Artist, Boston</p>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 
   <script src="./assets/script.js"></script>
